Add some docs for /service
Related to #6
